<resources>
    <string name="app_name">The App</string>

    <string name="add_task_title">Add Task</string>
    <string name="hint_title">Title</string>
    <string name="priority">Priority</string>
    <string name="add_button">ADD</string>
    <string name="cancel_button">CANCEL</string>
    <string name="edit_button">EDIT</string>
    <string name="edit_task_title">Edit Task</string>
</resources>