<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="350dp">



    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_task_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/task_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/hint_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text_view" />

    <TextView
        android:id="@+id/priority_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/priority"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/task_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        />



    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priority_text_view">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_red"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/selector_radio_red"
            android:button="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priority_text_view"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_blue"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/selector_radio_blue"
            android:button="@android:color/transparent"
            android:checked="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priority_text_view"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_button_green"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/selector_radio_green"
            android:button="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priority_text_view"
            />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_add_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/add_button"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_cancel_button"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/dialog_add_button"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        style="@style/Widget.Material3.Button.TextButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>